[tool.poetry]
name = "typer-tutorial"
version = "0.1.0"
description = ""
authors = ["Pelayo Gonzalez <pelayo.gonzalez@bezzier.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1"
typer = {extras = ["all"], version = "^0.3.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.18.1"
mypy = "^0.790"
pep8 = "^1.7.1"
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
